inserted Ionic Pro files for Monitor

--- a/www/index.html
+++ b/www/index.html
@@ -10,6 +10,7 @@
     ------------------------------------------------------------------->
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
+    <script src="lib/ionic-pro/dist/ionic-pro.module.min.js"></script>
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <!-- underscore -->
     <script src="lib/underscore.js"></script>
