OL: added files to lib and removed npm ol cause no work

--- a/www/index.html
+++ b/www/index.html
@@ -26,7 +26,7 @@
     <script src="lib/base64.js"></script>
     <!-- openlayers 3 -->
     <link rel="stylesheet" href="lib/ol/ol.css">
-    <script src="lib/ol/ol-debug.js"></script>
+    <script src="lib/ol/ol.js"></script>
     <!-- openlayers 3 popup (https://github.com/walkermatt/ol3-popup) -->
     <link rel="stylesheet" href="lib/ol/ol3-popup.css">
     <script src="lib/ol/ol3-popup.js"></script>
