Sentry: added code for web

--- a/www/indexWeb.html
+++ b/www/indexWeb.html
@@ -24,6 +24,9 @@
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
+    <!--Raven/Sentry Error Checking-->
+    <script src="lib/raven.min.js"></script>
+    <script>Raven.config('https://38715df894b44b088ea1a423705250bc@sentry.io/1314682').install();</script>
     <!-- underscore -->
     <script src="lib/underscore.js"></script>
     <!-- ngMessages -->
