fixed bug when getFile() runs in WEB

--- a/www/app/spot/data/data-tab.web.html
+++ b/www/app/spot/data/data-tab.web.html
@@ -1,2 +1,2 @@
-<input type='file' id='file' style='display: none;'> 
+<input type='file' id='dataFile' style='display: none;'> 
 <strabo-data-tab-directive></strabo-data-tab-directive>
