--- a/www/app/spot/images/images-tab.web.html
+++ b/www/app/spot/images/images-tab.web.html
@@ -3,5 +3,5 @@
   <i class='icon ion-image'></i>
   <span class='button-text-big'>Add Image From File</span>
 </button>
-<input type='file' id='file' style='display: none;'>
+<input type='file' id='imageFile' style='display: none;'>
 <strabo-images-tab-directive></strabo-images-tab-directive>
