--- a/www/app/user/user.web.html
+++ b/www/app/user/user.web.html
@@ -8,5 +8,6 @@
     </div>
     <div class="text-center strabo-subheader-text">User Info</div>
   </div>
+  <input type='file' id='userProfileFile' style='display: none;'/>
   <strabo-user-directive></strabo-user-directive>
 </div>
