--- a/www/app/spot/data/data-tab.directive.html
+++ b/www/app/spot/data/data-tab.directive.html
@@ -25,7 +25,7 @@
 	</ion-list>
 	<div class="item item-divider">CSV Files</div>
 	<ion-item ng-show="vmChild.isWeb()" class="button-text-big " ng-click='vmChild.importData()' ng-model='vmChild.importItem'>
-		<img class='strabo-icon' type='file' id='file' src='img/import-project.png'> Import CSV File
+		<img class='strabo-icon' src='img/import-project.png'> Import CSV File
 	</ion-item>
 	<div class="padding" ng-hide="vm.spot.properties.data || vm.spot.properties.data.json">
 		There are no CSV files to display
