--- a/www/index.html
+++ b/www/index.html
@@ -11,6 +11,9 @@
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <script src="lib/ionic-pro/dist/ionic-pro.module.min.js"></script>
+    <!--Raven/Sentry Error Checking-->
+    <script src="lib/raven.min.js"></script>
+    <script>Raven.config('https://38715df894b44b088ea1a423705250bc@sentry.io/1314682').install();</script>
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <!-- underscore -->
     <script src="lib/underscore.js"></script>
