--- a/www/app/spot/images/images-tab.directive.html
+++ b/www/app/spot/images/images-tab.directive.html
@@ -1,7 +1,9 @@
 <div class='strabo-image'>
   <div class='row' ng-repeat='image in vm.spot.properties.images track by image.id'>
     <div class='col image-col'>
-      <a><img ng-src='{{ vmChild.getImageSrc(image.id) }}' width='100' height='100' ng-click='vmChild.showImages($index)'/></a>
+      <div class="strabo-small-thumbnail">
+        <img ng-src='{{ vmChild.getImageSrc(image.id) }}' ng-click='vmChild.showImages($index)'/>
+      </div>
     </div>
     <div class='col'>
       <ion-input class='item item-input'>
