Updated underscore to 1.9.1

--- a/www/index.html
+++ b/www/index.html
@@ -16,7 +16,7 @@
     <script>Raven.config('https://38715df894b44b088ea1a423705250bc@sentry.io/1314682').install();</script>
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <!-- underscore -->
-    <script src="lib/underscore.js"></script>
+    <script src="lib/underscore/underscore-min.js"></script>
     <!-- ngMessages -->
     <script src="lib/angular-messages.js"></script>
     <!-- papa parse (csv to json) -->
