--- a/www/indexWeb.html
+++ b/www/indexWeb.html
@@ -28,7 +28,7 @@
     <script src="lib/raven.min.js"></script>
     <script>Raven.config('https://38715df894b44b088ea1a423705250bc@sentry.io/1314682').install();</script>
     <!-- underscore -->
-    <script src="lib/underscore.js"></script>
+    <script src="lib/underscore/underscore-min.js"></script>
     <!-- ngMessages -->
     <script src="lib/angular-messages.js"></script>
     <!-- papa parse (csv to json) -->
