isolating lines making app crash on maps

--- a/www/app/maps/map/map.html
+++ b/www/app/maps/map/map.html
@@ -19,3 +19,9 @@
     <div id='zoomInfo'>Zoom: {{ vm.currentZoom }}</div>
   </ion-pane>
 </ion-view>
+
+    <!-- <h2>My Map</h2>
+    <div map-dir id="map" class="map"></div> -->
+
+    
+
