Begin work on CSV Export for AVO

--- a/www/app/project/manage/manage-project-popover.html
+++ b/www/app/project/manage/manage-project-popover.html
@@ -27,6 +27,9 @@
       <ion-item ng-click='vm.importProjectForDistribution()'>
         <img class='strabo-icon' src='img/import-project.png'> Import Project from Device
       </ion-item>
+      <ion-item ng-click='vm.exportAVOCSV()'>
+        <img class='strabo-icon' src='img/export-project.png'> Export Strabo CSV
+      </ion-item>
     </ion-list>
   </ion-content>
 </ion-popover-view>
