--- a/www/app/project/manage/manage-project-popover.html
+++ b/www/app/project/manage/manage-project-popover.html
@@ -28,7 +28,7 @@
         <img class='strabo-icon' src='img/import-project.png'> Import Project from Device
       </ion-item>
       <ion-item ng-click='vm.exportAVOCSV()'>
-        <img class='strabo-icon' src='img/export-project.png'> Export Strabo CSV
+        <img class='strabo-icon' src='img/export-project.png'> Export Sample CSV
       </ion-item>
     </ion-list>
   </ion-content>
