--- a/www/index.html
+++ b/www/index.html
@@ -98,6 +98,8 @@
     <script src="app/spot/nesting/nesting-tab.controller.js"></script>
     <script src="app/spot/orientations/orientations-tab.controller.js"></script>
     <script src="app/spot/other-features/other-features-tab.controller.js"></script>
+    <script src="app/spot/petrology/basics/basics-tab.controller.js"></script>
+    <script src="app/spot/petrology/minerals/minerals-tab.controller.js"></script>
     <script src="app/spot/relationships/relationships-tab.controller.js"></script>
     <script src="app/spot/samples/samples-tab.controller.js"></script>
     <script src="app/spot/sed/interpretations/interpretations-tab.controller.js"></script>
@@ -178,6 +180,8 @@
     <script src="app/spot/nesting/nesting-tab.directive.js"></script>
     <script src="app/spot/orientations/orientations-tab.directive.js"></script>
     <script src="app/spot/other-features/other-features-tab.directive.js"></script>
+    <script src="app/spot/petrology/basics/basics-tab.directive.js"></script>
+    <script src="app/spot/petrology/minerals/minerals-tab.directive.js"></script>
     <script src="app/spot/relationships/relationships-tab.directive.js"></script>
     <script src="app/spot/samples/samples-tab.directive.js"></script>
     <script src="app/spot/sed/interpretations/interpretations-tab.directive.js"></script>
