--- a/www/app/spot/petrology/minerals/minerals-tab.directive.html
+++ b/www/app/spot/petrology/minerals/minerals-tab.directive.html
@@ -1,6 +1,6 @@
 <div>
   <div class='button-bar'>
-    <button class='button' ng-click='vmChild.switchMineralsForm("minerology")'>Minerology</button>
+    <button class='button' ng-click='vmChild.switchMineralsForm("mineralogy")'>Mineralogy</button>
     <button class='button' ng-click='vmChild.switchMineralsForm("reactions")'>Reactions</button>
     <button class='button' ng-click='vmChild.switchMineralsForm("ternary")'>Ternary</button>
   </div>
